--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,6 +19,7 @@
     "web-vitals": "^2.1.3",
     "gh-pages": "^3.2.3"
   },
+  "homepage": "https://spicy-pineapple-chicken-stew.github.io/cissa-summerhack",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
